--- a/1.html
+++ b/1.html
@@ -2,6 +2,6 @@
 <html>
     <head>
         <title>Я с телефона!</title>
-        
+         <link rel='stylesheet' href=main1.css>
     </head>
 </html>
