--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
         <p class='p'>
             Еееее я перешёл на linux!!!!!
         </p>
+        <div>
+            <button></button>
+        </div>
     </body>
 </html>
