--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <p class='p'>
             Еееее я перешёл на linux!!!!!
+            (это новое сообщение. надеюсь, что тут будет задний фон)
         </p>
         <div>
             <button></button>
