--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>yes</title>
+        <title>Уже не очень свежые новости..</title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -11,7 +11,11 @@
             (это новое сообщение. надеюсь, что тут будет задний фон)
         </p>
         <div>
-            <button></button>
+            <button>
+                <a href=#>
+                    не помню, откуда и для чего, но пусть будет
+                </a>
+            </button>
         </div>
     </body>
 </html>
