--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </p>
         <div>
             <button>
-                <a href=#>
+                <a href=1.html>
                     не помню, откуда и для чего, но пусть будет
                 </a>
             </button>
