--- a/1.html
+++ b/1.html
@@ -4,4 +4,12 @@
         <title>Я с телефона!</title>
          <link rel='stylesheet' href=main1.css>
     </head>
+    <body>
+        <h1>
+            Будем считать, что тут написано что-то ооочень умное)
+        </h1>
+        <h2>
+            Здесь я буду писать реальные новости. а кнопку я потом скрою.
+        </h2>
+    </body>
 </html>
