--- a/1.html
+++ b/1.html
@@ -4,6 +4,19 @@
         <title>Я с телефона!</title>
          <link rel='stylesheet' href=main1.css>
     </head>
+    <style>
+        body{
+    font-family = cursive;
+    background = black;
+    radius = 3rem;
+    color = red;
+}
+h1{
+    background = red;
+    color = black;
+    radius = 0,3rem;
+}
+    </style>
     <body>
         <h1>
             Будем считать, что тут написано что-то ооочень умное)
