--- a/1.html
+++ b/1.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Я с телефона!</title>
-         <link rel='stylesheet' href=main1.css>
+        <title>Это типо секретка будет</title>
     </head>
     <style>
         body{
