--- a/1.html
+++ b/1.html
@@ -5,15 +5,15 @@
     </head>
     <style>
         body{
-    font-family = cursive;
-    background = black;
-    radius = 3rem;
-    color = red;
+    font-family: cursive;
+    background: black;
+    radius: 3rem;
+    color: red;
 }
 h1{
-    background = red;
-    color = black;
-    radius = 0,3rem;
+    background: red;
+    color: black;
+    radius: 0,3rem;
 }
     </style>
     <body>
