--- a/1.html
+++ b/1.html
@@ -5,11 +5,11 @@
     </head>
     <style>
         body{
-    font-family: cursive;
+    font-family: Arial;
     background: black;
-    radius: 3rem;
+    radius: 10px;
     color: red;
-    font-size: 5rem;
+    font-size: 3rem;
 }
 h1{
     background: red;
