--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     </head>
     <body>
         <p class='p'>
-            Еееее я перешёл на linux!!!!!
-            (это новое сообщение. надеюсь, что тут будет задний фон)
+            Задний фон пока не могу убрать. Фото не отправляется на фигне, в которой я делаю.
         </p>
         <div>
             <button>
