--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
         body{
     font-family: Arial;
     background: black;
-    radius: 2px;
+    border-radius: 2px;
     color: red;
     font-size: 3rem;
 }
