--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         </p>
         <div>
             <button>
-                <a href=1.html>
-                    не помню, откуда и для чего, но пусть будет
-                </a>
+                    тут ничего нет(почти)
             </button>
         </div>
     </body>
