--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             Задний фон пока не могу убрать. Фото не отправляется на фигне, в которой я делаю.
         </p>
         <div>
-            <button href="1.html">
+            <button onclick="1.html">
                     тут ничего нет(почти)
             </button>
         </div>
