--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             Задний фон пока не могу убрать. Фото не отправляется на фигне, в которой я делаю.
         </p>
         <div>
-            <button onclick="1.html">
-                    тут ничего нет(почти)
+            <button>
+                    <a href=1.html>тут ничего нет(почти)</a>
             </button>
         </div>
     </body>
