--- a/1.html
+++ b/1.html
@@ -4,10 +4,13 @@
         <title>Это типо секретка будет</title>
     </head>
     <style>
+        html{
+            background:rgb(20,20,20);
+        }
         body{
     font-family: Arial;
     background: black;
-    border-radius: 2px;
+    border-radius: 10px;
     color: red;
     font-size: 3rem;
 }
@@ -19,10 +22,10 @@ h1{
     </style>
     <body>
         <h1>
-            Будем считать, что тут написано что-то ооочень умное)
+            Я потратил 2 часа своей жизни на написание этого сайта.
         </h1>
         <h2>
-            Здесь я буду писать реальные новости. а кнопку я потом скрою.
+            ну, я все равно люблю это дело.
         </h2>
     </body>
 </html>
