--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Уже не очень свежые новости..</title>
         <link rel="stylesheet" href="main.css">
+        <link rel="icon" href=>
     </head>
     <body>
         <p class='p'>
