--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Уже не очень свежые новости..</title>
         <link rel="stylesheet" href="main.css">
-        <link rel="icon" href=>
+        <link rel="icon" href=IMG_0765.jpeg>
     </head>
     <body>
         <p class='p'>
