--- a/1.html
+++ b/1.html
@@ -22,10 +22,10 @@ h1{
     </style>
     <body>
         <h1>
-            Я потратил 2 часа своей жизни на написание этого сайта.
+           Клянусь жизнью, этот сайт написал я сам. Да, иногда пользовался доп. информацией, но в общем всё сделано самостоятельно! :>
         </h1>
         <h2>
-            ну, я все равно люблю это дело.
+            сообщение персонально для группы „Не шкаф!!!🤬🤬"
         </h2>
     </body>
 </html>
