--- a/1.html
+++ b/1.html
@@ -22,10 +22,10 @@ h1{
     </style>
     <body>
         <h1>
-           Клянусь жизнью, этот сайт написал я сам. Да, иногда пользовался доп. информацией, но в общем всё сделано самостоятельно! :>
+            Итак. Вы реально зашли. Меня это радует!
         </h1>
         <h2>
-            сообщение персонально для группы „Не шкаф!!!🤬🤬"
+            Что могу сказать. Сегодня день довольно хороший. Началось все с 3 часов сна(ну хоть не 1). Дальше всё как у всех. Потом сестра уснула, пообедал и родители уехали). Сегодня гораздо лучше пел, чем, например, позавчера. Сейчас поужинал и теперь хз, что делать.
         </h2>
     </body>
 </html>
