--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <p class='p'>
-            Задний фон пока не могу убрать. Фото не отправляется на фигне, в которой я делаю.
+            Да, кнопка пока что часть интерьера. Потом я её скрою. а пока я буду писать письма именно туда)
         </p>
         <div>
             <button>
