--- a/1.html
+++ b/1.html
@@ -22,10 +22,10 @@ h1{
     </style>
     <body>
         <h1>
-            Итак. Вы реально зашли. Меня это радует!
+            Да. Я опять в школе.
         </h1>
         <h2>
-            Что могу сказать. Сегодня день довольно хороший. Началось все с 3 часов сна(ну хоть не 1). Дальше всё как у всех. Потом сестра уснула, пообедал и родители уехали). Сегодня гораздо лучше пел, чем, например, позавчера. Сейчас поужинал и теперь хз, что делать.
+            Сейчас буду ждать классную, чтоб решить проблему с оценкой за четверть.
         </h2>
     </body>
 </html>
