--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Уже не очень свежые новости..</title>
+        <title>новости</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href=IMG_0765.jpeg>
     </head>
     <body>
         <p class='p'>
-            Да, кнопка пока что часть интерьера. Потом я её скрою. а пока я буду писать письма именно туда)
+            Новости дальше!
         </p>
         <div>
             <button>
-                    <a href=1.html>тут ничего нет(почти)</a>
+                    <a href=1.html>дальше</a>
             </button>
         </div>
     </body>
