--- a/1.html
+++ b/1.html
@@ -22,10 +22,11 @@ h1{
     </style>
     <body>
         <h1>
-            Да. Я опять в школе.
+            И как быть?
         </h1>
         <h2>
-            Сейчас буду ждать классную, чтоб решить проблему с оценкой за четверть.
+           Какое хорошее же чувство, когда кто-то касается чего-то ценного для тебя, а ты даже сказать ничего не можешь.
+            А главное, что ты и сказать ничего не можешь, потому что стыдишься.
         </h2>
     </body>
 </html>
