--- a/1.html
+++ b/1.html
@@ -11,11 +11,11 @@
     font-family: Arial;
     background: black;
     border-radius: 25px;
-    color: red;
+    color: blue;
     font-size: 3rem;
 }
 h1{
-    background: red;
+    background: blue;
     color: black;
     border-radius: 15px;
 }
