--- a/1.html
+++ b/1.html
@@ -26,7 +26,7 @@ h1{
         </h1>
         <h2>
            Какое хорошее же чувство, когда кто-то касается чего-то ценного для тебя, а ты даже сказать ничего не можешь.
-            А главное, что ты и сказать ничего не можешь, потому что стыдишься.
+            А главное,что ты начинаешь себя до такой степени ненавидеть, что выкинуться хочется. Даже музыка не помогает..
         </h2>
     </body>
 </html>
