--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Это типо секретка будет</title>
+        <title>будет как дневник.</title>
     </head>
     <style>
         html{
@@ -28,5 +28,8 @@ h1{
            Какое хорошее же чувство, когда кто-то касается чего-то ценного для тебя, а ты даже сказать ничего не можешь.
             А главное,что ты начинаешь себя до такой степени ненавидеть, что выкинуться хочется. Даже музыка не помогает..
         </h2>
+        <p>
+            Даже не знаю, что тут сказать вообще. Я ей вдохновляюсь, а её, как оказалось, вообще не ценят. 
+        </p>
     </body>
 </html>
