--- a/1.html
+++ b/1.html
@@ -19,6 +19,10 @@ h1{
     color: black;
     border-radius: 15px;
 }
+        p{
+            color: rgb(5,5,5);
+            background: rgba(0,0,0,0.2);
+        }
     </style>
     <body>
         <h1>
