--- a/1.html
+++ b/1.html
@@ -20,8 +20,9 @@ h1{
     border-radius: 15px;
 }
         p{
-            color: rgb(5,5,5);
-            background: rgba(0,0,0,0.2);
+            color: rgb(10,10,10);
+            background: rgba(0,0,0,0.5);
+            border-radius: 25px;
         }
     </style>
     <body>
