--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href=IMG_0765.jpeg>
     </head>
+    <style>
+        button{
+    background:rgba(20, 20, 20, 0.3);
+    padding: 2rem;
+    border-radius: 7px;
+    border-color: red;
+}
+a{
+    font:Arial;
+    font-style: none;
+    color: rgba(0, 255, 0, 0.3);
+    font-size: 2rem;
+}
+html{
+    background:rgb(15, 15, 15);
+}
+body{
+    background: url(997f83ab-410a-4bf1-995d-89b618cacbb4.jpeg);
+    background-size: cover;
+    border-radius: 1rem;
+    size: cover;
+}
+.p{
+    font-family: Impact, Haettenschweiler;
+    color:rgba(244, 255, 0, 0.8);
+    padding: 3rem;
+    font-size: 3rem;
+    text-align: center;
+}
+
+    </style>
     <body>
         <p class='p'>
             Новости дальше!
